--- a/BaseScene.html
+++ b/BaseScene.html
@@ -19,3 +19,19 @@
       <!-- TASK 4: add gaze to a box in back-->
     </a-scene>
   </body>
+  <body>
+    <!-- all of our objects (lights, models, cameras need to be a a part of our scene)-->
+      <a-scene>
+        <!-- AFrame uses meters as its measurement-->
+        <!-- set our camera to be at eye level-->
+        <a-camera position="0 1.5 0" ></a-camera> 
+        <!-- add a box to our scene. move to left, move it up to be on floor, rotate it, and set the color-->
+        <a-box position="2 0.5 -3" rotation="0 45 0" color="blue"></a-box>
+        <a-light position="2 5 -3" color="white" type="ambient"></a-light>
+        <!-- TASK 1: Add a blue box to the right-->
+        <!-- TASK 2: Add a light above-->
+        <!-- TASK 3: Add Walls to the scene-->
+        <!-- TASK 4: add gaze to a box in back-->
+      </a-scene>
+    </body>
+  
