--- a/BaseScene.html
+++ b/BaseScene.html
@@ -24,14 +24,19 @@
       <a-scene>
         <!-- AFrame uses meters as its measurement-->
         <!-- set our camera to be at eye level-->
-        <a-camera position="0 1.5 0" ></a-camera> 
+        <a-camera position="0 1.5 0" ><a-cursor></a-cursor></a-camera> 
         <!-- add a box to our scene. move to left, move it up to be on floor, rotate it, and set the color-->
-        <a-box position="2 0.5 -3" rotation="0 45 0" color="blue"></a-box>
-        <a-light position="2 5 -3" color="white" type="ambient"></a-light>
+        <a-box position="-2 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
         <!-- TASK 1: Add a blue box to the right-->
-        <!-- TASK 2: Add a light above-->
+        <a-box position="2 0.5 -3" rotation="0 45 0" color="blue"></a-box>
+        <!-- TASK 2: Add a point light above-->
+        <a-light position="0 3 -3" type="point"></a-light>
         <!-- TASK 3: Add Walls to the scene-->
+        <a-box position = "0 5 0" scale="10 10 10" side="back" color ="gray"></a-box>
         <!-- TASK 4: add gaze to a box in back-->
-      </a-scene>
+        <a-box position="0 0.5 -4" rotation="0 0 0" color="#4CC3D9"
+        event-set__enter="_event: mouseenter; color: pink"
+        event-set__leave="_event: mouseleave; color: blue"></a-box>
+        </a-scene>
     </body>
   
