--- a/bcard.html
+++ b/bcard.html
@@ -21,7 +21,7 @@
       <a-entity mindar-image-target="targetIndex: 0">
         <!-- add cube here-->
         <a-box position="2 0.5 -3" rotation="0 45 0" color="blue"></a-box>
-        <a-entity
+        <!--  <a-entity
         position="0 -2.5 0"
         rotation="0 0 0"
         scale="2.5 2.5 2.5"
