--- a/bcard.html
+++ b/bcard.html
@@ -12,7 +12,7 @@
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card" src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/qrcode.png" />-->
-       <!-- <<a-asset-item id="avatarModel" src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb"></a-asset-item>-->
+        <a-asset-item id="avatarModel" src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb"></a-asset-item>-->
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -20,8 +20,8 @@
       <!-- sets the origin/target-->
       <a-entity mindar-image-target="targetIndex: 0">
         <!-- add cube here-->
-        <a-box position="2 0.5 -3" rotation="0 45 0" color="blue"></a-box>
-        <!--  <a-entity
+       <!-- <a-box position="2 0.5 -3" rotation="0 45 0" color="blue"></a-box> -->
+        <a-entity
         position="0 -2.5 0"
         rotation="0 0 0"
         scale="2.5 2.5 2.5"
