--- a/bcard.html
+++ b/bcard.html
@@ -12,8 +12,8 @@
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card" src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/qrcode.png" />
-        <a-asset-item id="avatarModel" src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb"></a-asset-item>
-      </a-assets>
+      <!--  <a-asset-item id="avatarModel" src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb"></a-asset-item>
+      --></a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
