--- a/bcard.html
+++ b/bcard.html
@@ -10,21 +10,19 @@
     <!-- mindar image loads the mindar file which has computer vision info about the target-->
     <a-scene mindar-image="imageTargetSrc: https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/targets.mind;" 
     color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-
+      <a-assets>
+        <img id="card" src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/qrcode.png"/>
+        <a-asset-item id="avatarModel" 
+          src="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb"></a-asset-item>
+      </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <!-- sets the origin/target-->
       <a-entity mindar-image-target="targetIndex: 0">
-        <!-- add cube here-->
-        <!-- <a-box position="2 0.5 -3" rotation="0 45 0" color="blue"></a-box> -->
-        <a-entity
-        position="0 -2.5 0"
-        rotation="0 0 0"
-        scale="2.5 2.5 2.5"
-        gltf-model="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb"
-        animation-mixer
-        ></a-entity>
+        <a-entity position="0 -2.5 0" rotation="0 0 0" scale="2.5 2.5 2.5"
+          gltf-model="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb" animation-mixer>
+        </a-entity>
         </a-entity>
     </a-scene>
   </body>
