--- a/bcard.html
+++ b/bcard.html
@@ -32,7 +32,7 @@
 
       <!--<a-text value = "Bridget Lewis\n Lead Human Factors Engineer" position = "0 2.3 0" align = "center"></a-text>-->
 
-      <a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
+     <!-- <a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
 			height: 0.1;
 			bevelEnabled: true;
 			bevelSize: 0.02;
@@ -46,7 +46,7 @@
 			bevelThickness: 0.02;
 			value:SENIOR SOFTWARE ENGINEER" material="color: #AAAAFF;">
       </a-entity>
-    </a-entity>
+    </a-entity> -->
 
   </a-scene>
 </body>
