--- a/bcard.html
+++ b/bcard.html
@@ -37,14 +37,14 @@
 			bevelEnabled: true;
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
-			value: JOHN REMMES" material="color: #AAAAFF;">
+			value: Bridget Lewis" material="color: #AAAAFF;">
       </a-entity>
       <a-entity id="textArea" position="-1.25 2 -1" text-geometry="size: 0.125; 
 			height: 0.1;
 			bevelEnabled: true;
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
-			value:SENIOR SOFTWARE ENGINEER" material="color: #AAAAFF;">
+			value:LEAD HUMAN FACTORS ENGINEER" material="color: #AAAAFF;">
       </a-entity>
     </a-entity> -->
 
