--- a/bcard.html
+++ b/bcard.html
@@ -30,23 +30,23 @@
         gltf-model="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/models/avatar-wave.glb" animation-mixer>
       </a-entity>
 
-      <!--<a-text value = "Bridget Lewis\n Lead Human Factors Engineer" position = "0 2.3 0" align = "center"></a-text>-->
+      <a-text value = "Bridget Lewis\n Lead Human Factors Engineer" position = "0 2.3 0" align = "center"></a-text>-->
 
-     <!-- <a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
+      <a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
 			height: 0.1;
 			bevelEnabled: true;
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
-			value: Bridget Lewis" material="color: #AAAAFF;">
+			value:BRIDGET LEWIS" material="color: #AAAAFF;">
       </a-entity>
       <a-entity id="textArea" position="-1.25 2 -1" text-geometry="size: 0.125; 
 			height: 0.1;
 			bevelEnabled: true;
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
-			value:LEAD HUMAN FACTORS ENGINEER" material="color: #AAAAFF;">
+			value:LEAD HUMAN FACTORSENGINEER" material="color: #AAAAFF;">
       </a-entity>
-    </a-entity> -->
+    </a-entity>
 
   </a-scene>
 </body>
