--- a/bcard.html
+++ b/bcard.html
@@ -1,4 +1,3 @@
-
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <!-- include ar.js for A-Frame -->
@@ -12,6 +11,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/16/Stats.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.0.0/dist/mindar-image.prod.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.0.0/dist/mindar-image-aframe.prod.js"></script>
+
+
 
 <body>
   <a-scene mindar-image="imageTargetSrc: https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/models/targets.mind;"
@@ -30,21 +31,21 @@
         gltf-model="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/models/avatar-wave.glb" animation-mixer>
       </a-entity>
 
-      <!--<a-text value = "Bridget Lewis\n Lead Human Factors Engineer" position = "0 2.3 0" align = "center"></a-text>-->
+      <!--<a-text value = "John Remmes\n Senior Software Engineer" position = "0 2.3 0" align = "center"></a-text>-->
 
       <a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
 			height: 0.1;
 			bevelEnabled: true;
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
-			value:BRIDGET LEWIS" material="color: #AAAAFF;">
+			value: Bridget Lewis" material="color: #AAAAFF;">
       </a-entity>
       <a-entity id="textArea" position="-1.25 2 -1" text-geometry="size: 0.125; 
 			height: 0.1;
 			bevelEnabled: true;
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
-			value:LEAD HUMAN FACTORSENGINEER" material="color: #AAAAFF;">
+			value:Lead Human Factors Engineer" material="color: #AAAAFF;">
       </a-entity>
     </a-entity>
 
