--- a/bcard.html
+++ b/bcard.html
@@ -33,7 +33,7 @@
 
       <!--<a-text value = "John Remmes\n Senior Software Engineer" position = "0 2.3 0" align = "center"></a-text>-->
 
-      <a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
+      <!--<a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
 			height: 0.1;
 			bevelEnabled: true;
 			bevelSize: 0.02;
@@ -46,7 +46,7 @@
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
 			value:Lead Human Factors Engineer" material="color: #AAAAFF;">
-      </a-entity>
+      </a-entity>-->
     </a-entity>
 
   </a-scene>
