--- a/bcard.html
+++ b/bcard.html
@@ -30,7 +30,7 @@
         gltf-model="https://raw.githubusercontent.com/BridgetALewis/XRClass_Lewis/master/avatar-wave.glb" animation-mixer>
       </a-entity>
 
-      <a-text value = "Bridget Lewis\n Lead Human Factors Engineer" position = "0 2.3 0" align = "center"></a-text>
+      <!--<a-text value = "Bridget Lewis\n Lead Human Factors Engineer" position = "0 2.3 0" align = "center"></a-text>-->
 
      <a-entity id="textArea" position="-1.25 2.25 -1" text-geometry="size: 0.25; 
 			height: 0.1;
@@ -44,7 +44,7 @@
 			bevelEnabled: true;
 			bevelSize: 0.02;
 			bevelThickness: 0.02;
-			value:HUMAN FACTORS ENGINEER" material="color: #03fcd3;">
+			value: HUMAN FACTORS ENGINEER" material="color: #03fcd3;">
       </a-entity>
     </a-entity>
 
